# depwatch

./: .env.example  .pdm-python  CHANGELOG.md  LICENSE  README.md  pdm.toml  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: ci.yml  release.yml
deploywatch/: command.py  deployment.py  exception.py  history.py  main.py  presentation.py  repository.py
depwatch/: command.py  date_utils.py  deployment.py  exception.py  history.py  main.py  presentation.py  repository.py
depwatch/api_client/: circleci.py
tests/: test_command.py  test_date_utils.py  test_deployment.py  test_history.py  test_main.py  test_repository.py  test_writer.py
tests/api_client/: test_circleci.py
