[project]
name = "depwatch"
version = "0.1.1"
description = "A Simple command-line tool for collecting the times of various events in a project's lifecycle"
authors = [
    {name = "hamakou108", email = "hamakou108@gmail.com"},
]
dependencies = [
    "typer[all]>=0.7.0",
    "PyGithub>=1.58.0",
    "python-dotenv>=0.21.1",
    "pycircleci>=0.6.1",
    "requests>=2.28.2",
    "types-requests>=2.28.11.15",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-mock>=3.10.0",
]
linter = [
    "mypy>=1.0.1",
    "flake8>=6.0.0",
    "Flake8-pyproject>=1.2.2",
    "black>=23.1.0",
]

[project.scripts]
depwatch = "depwatch.main:main_cli"

[tool.pdm.scripts]
check_type = "mypy depwatch tests"
check_lint = "flake8 depwatch tests"
check_format = "black --check depwatch tests"
test = "pytest tests"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[[tool.mypy.overrides]]
module = "pycircleci.*"
ignore_missing_imports = true

[tool.flake8]
select = ['F']

[tool.black]
line-length = 88
