[project]
name = "depwatch"
version = "0.1.3"
description = "A Simple command-line tool for collecting the times of various events in a project's lifecycle"
authors = [
    {name = "hamakou108", email = "hamakou108@gmail.com"},
]
dependencies = [
    "typer[all]>=0.9",
    "PyGithub>=1.58",
    "python-dotenv>=1.0",
    "pycircleci>=0.7",
    "requests>=2.31",
    "types-requests>=2.31",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3",
    "pytest-mock>=3.10",
]
linter = [
    "mypy>=1.3",
    "flake8>=6.0",
    "Flake8-pyproject>=1.2",
    "black>=23.3",
]

[project.scripts]
depwatch = "depwatch.main:main_cli"

[tool.pdm.scripts]
check_type = "mypy depwatch tests"
check_lint = "flake8 depwatch tests"
check_format = "black --check depwatch tests"
test = "pytest tests"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[[tool.mypy.overrides]]
module = "pycircleci.*"
ignore_missing_imports = true

[tool.flake8]
select = ['F']

[tool.black]
line-length = 88
